[package]
name = "pump-amm-cpi"
version = "0.1.1"
edition = "2021"
description = "Anchor CPI client for the pump.fun AMM program."
authors = ["Taishi <taishi.nojima@aya.yale.edu>"]
repository = "https://github.com/taishi8117/pump-amm-cpi"
license = "Apache-2.0"

[dependencies]
anchor-gen = "0.3.1"
anchor-lang = "0.31.0"
